test/e2e/tests/manifests/agent-gateway-integration.yaml
image:
  registry: ghcr.io/kgateway-dev
  repository: agentgateway-controller

# Configuration for the kgateway controller pod
controller:
  logLevel: debug

inferenceExtension:
  enabled: true
