test/e2e/tests/manifests/custom-gwp-2.yaml
gatewayClassParametersRefs:
  kgateway:
    name: custom-gwp-2
    namespace: kgateway-test
controller:
  tolerations:
    - operator: Exists
      effect: NoSchedule
